get team by Name
